codepkg/objects/Price_Specification_Book_Product__c.object
<CustomObject>
    <fields>
        <fullName>Retailer_Division__c</fullName>
        <formula>Retailer_Code__r.Retailer_Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIAL_REQUIREMENTS__c</fullName>
        <label>SPECIAL REQUIREMENTS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPEC_COLOUR__c</fullName>
        <label>SPEC COLOUR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPEC_MATERIAL__c</fullName>
        <label>SPEC MATERIAL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sizer_Print__c</fullName>
        <description>This is to show the sizer printing for Macy</description>
        <label>Print</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Virgin</fullName>
                </value>
                <value>
                    <fullName>Re-Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Features__c</fullName>
        <label>Special Features</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sync_to_Price_Product_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>trigger process builder to sync the price to price product by currency object</description>
        <label>Sync to Price Product Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UK_NAIL_SIZE__c</fullName>
        <label>UK NAIL SIZE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UK_NAIL_SUPPLIER__c</fullName>
        <label>UK NAIL SUPPLIER</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UK_NAIL_TYPE__c</fullName>
        <label>UK NAIL TYPE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM_Price__c</fullName>
        <formula>Price_100pcs__c /100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_Rebate_pc__c</fullName>
        <label>USD Rebate/pc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_Reuse_Rebate_pc__c</fullName>
        <label>USD Reuse Rebate/pc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variable_Data_Product__c</fullName>
        <formula>TEXT(Product_Unique_ID__r.Variable_Data_Product__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variable Data Product</label>
        <type>Text</type>
    </fields>
    <label>Price &amp; Specification Book Product</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Price_100pcs__c</columns>
        <columns>Active__c</columns>
        <columns>Associated_Product__c</columns>
        <columns>Color__c</columns>
        <columns>USD_Rebate_pc__c</columns>
        <columns>EUR_Rebate_pc__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Labels</fullName>
        <columns>Customer_Ref_Model__c</columns>
        <columns>NAME</columns>
        <columns>Product_Unique_ID__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Sync_to_Price_Product_Currency__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Variable_Data_Product__c</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>contains</operation>
            <value>Label</value>
        </filters>
        <label>All Labels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Price_Book_Products</fullName>
        <columns>Account__c</columns>
        <columns>Product_Unique_ID__c</columns>
        <columns>NAME</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>Color__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Price_Specification_Book__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Source__c</columns>
        <columns>Price_100pcs__c</columns>
        <columns>Local_SKU__c</columns>
        <columns>Product_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Price_Book_Product</value>
        </filters>
        <label>All Price Book Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Specification_Products</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>PROD_CODE__c</columns>
        <columns>REVISION_NUMBER__c</columns>
        <columns>REVISION_DATE__c</columns>
        <columns>SPEC_COLOUR__c</columns>
        <columns>SPEC_MATERIAL__c</columns>
        <columns>LOGO_PRINT__c</columns>
        <columns>Product_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Specification_Book_Product</value>
        </filters>
        <label>All Specification Products</label>
    </listViews>
    <listViews>
        <fullName>BEST_LESS_TIC</fullName>
        <columns>NAME</columns>
        <columns>Associated_Product__c</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>Color__c</columns>
        <columns>Sizer_Print__c</columns>
        <columns>Price_100pcs__c</columns>
        <columns>BOX_QTY__c</columns>
        <columns>Local_SKU__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Hidden_Catalogue__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Active__c</columns>
        <columns>Product_image_url__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Price_Book_Product</value>
        </filters>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>BEST</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Price_Specification_Book__c</field>
            <operation>equals</operation>
            <value>Best &amp; Less Global Price 2019-11</value>
        </filters>
        <filters>
            <field>Order_to_Company__c</field>
            <operation>equals</operation>
            <value>Bangladesh - Mainetti (Bangladesh) PVT Ltd,India - Mainetti (India) Pvt Ltd</value>
        </filters>
        <label>__BEST &amp; LESS - TIC</label>
    </listViews>
    <listViews>
        <fullName>BN1_Hook_Spec_Product_List</fullName>
        <columns>NAME</columns>
        <columns>Price_Specification_Book__c</columns>
        <columns>HOOK_CODE__c</columns>
        <columns>HOOK_COLOUR_COATING__c</columns>
        <columns>HOOK_REFERENCE__c</columns>
        <columns>HOOK_SIZE__c</columns>
        <columns>HOOK_SUPPLIER__c</columns>
        <columns>HOOK_TYPE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HOOK_CODE__c</field>
            <operation>contains</operation>
            <value>BN1</value>
        </filters>
        <label>BN1 Hook Spec Product List</label>
    </listViews>
    <listViews>
        <fullName>BNL_Hangers</fullName>
        <columns>NAME</columns>
        <columns>Product_Unique_ID__c</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Color__c</columns>
        <columns>Sizer_Print__c</columns>
        <columns>Price_100pcs__c</columns>
        <columns>BOX_QTY__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Local_SKU__c</columns>
        <columns>Print_Shop__c</columns>
        <columns>Active__c</columns>
        <columns>Variable_Data_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>Best</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Price_Book_Product</value>
        </filters>
        <filters>
            <field>Business_Vertical__c</field>
            <operation>contains</operation>
            <value>Hanger</value>
        </filters>
        <label>_BNL Hangers</label>
    </listViews>
    <listViews>
        <fullName>CareLabelRetailer</fullName>
        <columns>NAME</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>Product_Unique_ID__c</columns>
        <columns>Price_Specification_Book__c</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Color__c</columns>
        <columns>Sizer_Print__c</columns>
        <columns>Price_100pcs__c</columns>
        <columns>BOX_QTY__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Local_SKU__c</columns>
        <columns>Print_Shop__c</columns>
        <columns>Variable_Data_Product__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>CareLabelRetailer</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Price_Book_Product</value>
        </filters>
        <label>_CareLabelRetailer</label>
    </listViews>
    <listViews>
        <fullName>DECATHLON</fullName>
        <columns>NAME</columns>
        <columns>Associated_Product__c</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>Color__c</columns>
        <columns>Sizer_Print__c</columns>
        <columns>Price_100pcs__c</columns>
        <columns>BOX_QTY__c</columns>
        <columns>Local_SKU__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Hidden_Catalogue__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Active__c</columns>
        <columns>Product_image_url__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Price_Book_Product</value>
        </filters>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>DECATHLON</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>__DECATHLON</label>
    </listViews>
    <listViews>
        <fullName>DecathlonHanger</fullName>
        <columns>NAME</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>Product_Unique_ID__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Color__c</columns>
        <columns>Description__c</columns>
        <columns>Sizer_Print__c</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Price_100pcs__c</columns>
        <columns>BOX_QTY__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Local_SKU__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>DECATHLON</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Price_Book_Product</value>
        </filters>
        <filters>
            <field>Business_Vertical__c</field>
            <operation>contains</operation>
            <value>hanger</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>DCB530</value>
        </filters>
        <label>_DecathlonHanger</label>
    </listViews>
    <listViews>
        <fullName>Demo</fullName>
        <columns>NAME</columns>
        <columns>Product_Unique_ID__c</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Color__c</columns>
        <columns>Sizer_Print__c</columns>
        <columns>Price_100pcs__c</columns>
        <columns>BOX_QTY__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Local_SKU__c</columns>
        <columns>Print_Shop__c</columns>
        <columns>Active__c</columns>
        <columns>Variable_Data_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>equals</operation>
            <value>Demo</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Price_Book_Product</value>
        </filters>
        <label>_Demo</label>
    </listViews>
    <listViews>
        <fullName>DemoRetail02</fullName>
        <columns>Customer_Ref_Model__c</columns>
        <columns>NAME</columns>
        <columns>Product_Unique_ID__c</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Active__c</columns>
        <columns>Color__c</columns>
        <columns>Sizer_Print__c</columns>
        <columns>Price_100pcs__c</columns>
        <columns>BOX_QTY__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Variable_Data_Product__c</columns>
        <columns>Local_SKU__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>DemoRetail02</value>
        </filters>
        <filters>
            <field>Business_Vertical__c</field>
            <operation>contains</operation>
            <value>flexible,label,tla</value>
        </filters>
        <filters>
            <field>Price_Book_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Price_Book_Product</value>
        </filters>
        <label>_DemoRetail02</label>
    </listViews>
    <listViews>
        <fullName>DemoRetail02Hangers</fullName>
        <columns>Customer_Ref_Model__c</columns>
        <columns>NAME</columns>
        <columns>Product_Unique_ID__c</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Active__c</columns>
        <columns>Color__c</columns>
        <columns>Sizer_Print__c</columns>
        <columns>Price_100pcs__c</columns>
        <columns>BOX_QTY__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Variable_Data_Product__c</columns>
        <columns>Local_SKU__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>DemoRetail02</value>
        </filters>
        <filters>
            <field>Business_Vertical__c</field>
            <operation>contains</operation>
            <value>Hanger</value>
        </filters>
        <filters>
            <field>Price_Book_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Price_Book_Product</value>
        </filters>
        <filters>
            <field>Order_to_Company__c</field>
            <operation>equals</operation>
            <value>Hong Kong - Mainetti (HK) Ltd</value>
        </filters>
        <label>_DemoRetail02Hangers</label>
    </listViews>
    <listViews>
        <fullName>DemoTLA</fullName>
        <columns>NAME</columns>
        <columns>Product_Unique_ID__c</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Color__c</columns>
        <columns>Sizer_Print__c</columns>
        <columns>Price_100pcs__c</columns>
        <columns>BOX_QTY__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Local_SKU__c</columns>
        <columns>Print_Shop__c</columns>
        <columns>Active__c</columns>
        <columns>Variable_Data_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>Demo</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Price_Book_Product</value>
        </filters>
        <filters>
            <field>Business_Vertical__c</field>
            <operation>equals</operation>
            <value>TLA</value>
        </filters>
        <label>_DemoTLA</label>
    </listViews>
    <listViews>
        <fullName>Demo_DMS</fullName>
        <columns>NAME</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>Product_Unique_ID__c</columns>
        <columns>Variable_Data_Product__c</columns>
        <columns>MOQ__c</columns>
        <columns>Local_SKU__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Description__c</columns>
        <columns>Description2__c</columns>
        <columns>Description_3__c</columns>
        <columns>Color__c</columns>
        <columns>Sizer_Print__c</columns>
        <columns>Order_UOM__c</columns>
        <columns>BOX_QTY__c</columns>
        <columns>Retailer_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book_Product__c.Price_Book_Product</value>
        </filters>
        <filters>
            <field>Business_Vertical__c</field>
            <operation>equals</operation>
            <value>MCare</value>
        </filters>
        <filters>
            <field>Order_to_Company__c</field>
            <operation>equals</operation>
            <value>South China / Hong Kong - MainettiCare Health Technologies</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>Demo</value>
        </filters>
        <label>_Demo DMS</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Mainetti Model</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price &amp; Specification Book Products</pluralLabel>
    <recordTypes>
        <fullName>Price_Book_Product</fullName>
        <active>true</active>
        <label>Price Book Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Specification_Book_Product</fullName>
        <active>true</active>
        <label>Specification Book Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>